# hass-template-climate

./: .gitignore  README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/config/: configuration.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yaml  validate.yaml
custom_components/climate_template/: __init__.py  climate.py  manifest.json
